[package]
name = "hack_asm"
author = "phoony"
version = "0.1.0-dev"
edition = "2021"
license-file = "LICENSE"
description = "A Nand2Tetris Hack Assembly Language Assembler written in Rust"
readme = "README.md"
repository = "https://github.com/phoony/hack_asm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.31"
phf = { version = "0.10.1", features = ["macros"] }