[package]
name = "hack_asm"
author = "phoony"
version = "1.0.1"
edition = "2021"
license = "MIT"
description = "A Nand2Tetris Hack Assembly Language Assembler written in Rust"
readme = "README.md"
repository = "https://github.com/phoony/hack_asm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.31"
pest = "2.1.3"
pest_derive = "2.1.0"
phf = { version = "0.10.1", features = ["macros"] }
clap = { version = "3.1.18", features = ["derive"] }